Ajout images pour lat, long, et date

--- a/camera.html
+++ b/camera.html
@@ -43,13 +43,13 @@
         </div>
         <div class="row infos">
             <div class="col-sm-4 offset-md-4">
-                <div><img src="./lati.png">
+                <div><img src="resources/img/lati.png">
                     <div id="latitude" class="infoss"> </div>
                 </div>
-                <div><img src="./longi.png">
+                <div><img src="resources/img/longi.png">
                     <div id="longitude" class="infoss"> </div>
                 </div>
-                <div><img src="./calend.png">
+                <div><img src="resources/img/calend.png">
                     <div id="dateTime" class="infoss"> </div>
                 </div>
             </div>
