--- a/camera2.html
+++ b/camera2.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <link rel="stylesheet" type="text/css" href="resources/css/queries.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic' rel='stylesheet' type='text/css'>
+    <script src="resources/js/camera.js"></script>
     <title>CAM</title>
 </head>
 
@@ -21,14 +22,23 @@
                 <img src="resources/img/isen_cam.png" alt="ISEN cam logo" class="logo">
                 <img src="resources/img/isen_cam.png" alt="ISEN cam logo" class="logo-black">
                 <ul class="main-nav js--main-nav">
-                    <li><a href="camera2.html">Camera</a></li>
+                    <li><a href="index.html">Accueil</a></li>
                 </ul>
                 <a class="mobile-nav-icon js--nav-icon"><i class="ion-navicon-round"></i></a>
             </div>
         </nav>
-        <div class="hero-text-box">
-            <h1>Bienvenue<br>sur l'ISEN CAM</h1>
-            <a class="btn btn-ghost js--scroll-to-start" href="camera2.html">Let's go to take pictures</a>
+        <div class="row">
+            <div id="player">
+                <video id="video" style="display: none;"></video>
+                <canvas id="canvas"></canvas>
+                <img id="photo" style="display:none;">
+            </div>
+        </div>
+        <div class="row">
+            <a id="picShoot">Shoot</a>
+            <a id="downloadImage picSave" href="" onclick="return false;" download="myimage.jpeg">
+                <div id="picSave"></div>Save</a>
+            <a id="picReset">Reset</a>
         </div>
 
     </header>
@@ -39,6 +49,7 @@
     <script src="vendors/js/selectivizr.min.js"></script>
     <script src="vendors/js/jquery.waypoints.min.js"></script>
     <script src="resources/js/script.js"></script>
+    <script src="resources/js/param_camera.js"></script>
 
 </body>
 
