--- a/camera2.html
+++ b/camera2.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
     <link rel="stylesheet" type="text/css" href="vendors/css/ionicons.min.css">
@@ -36,7 +37,7 @@
         </div>
         <div class="row">
             <a id="picShoot">Shoot</a>
-            <a id="downloadImage picSave" href="" onclick="return false;" download="myimage.jpeg">
+            <a id="downloadImage" href="" onclick="return false;" download="myimage">
                 <div id="picSave"></div>Save</a>
             <a id="picReset">Reset</a>
         </div>
