--- a/camera2.html
+++ b/camera2.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" type="text/css" href="vendors/css/ionicons.min.css">
     <link rel="stylesheet" type="text/css" href="vendors/css/animate.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
-    <link rel="stylesheet" type="text/css" href="resources/css/queries.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/queries.css">``
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic' rel='stylesheet' type='text/css'>
     <script src="resources/js/camera.js"></script>
     <title>CAM</title>
@@ -36,12 +38,17 @@
             </div>
         </div>
         <div class="row">
-            <a id="picShoot">Shoot</a>
-            <a id="downloadImage" href="" onclick="return false;" download="myimage">
-                <div id="picSave"></div>Save</a>
-            <a id="picReset">Reset</a>
+            <div class="bouton_action">
+                <div class="bouton_full" id="picShoot">Shoot</div>
+                <div class="bouton_full" id="downloadImage" href="" onclick="return false;" download="myimage.jpeg">
+                    <div id="picSave">Save</div>
+                </div>
+                <div class="bouton_full" id="picReset">Reset</div>
+            </div>
         </div>
+        <div>
 
+        </div>
     </header>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
