--- a/camera2.html
+++ b/camera2.html
@@ -39,11 +39,11 @@
         </div>
         <div class="row">
             <div class="bouton_action">
-                <div class="bouton_full" id="picShoot">Shoot</div>
-                <div class="bouton_full" id="downloadImage" href="" onclick="return false;" download="myimage.jpeg">
-                    <div id="picSave">Save</div>
-                </div>
-                <div class="bouton_full" id="picReset">Reset</div>
+                <a class="bouton_full" id="picShoot">Shoot</a>
+                <a class="bouton_full" id="downloadImage" href="" onclick="return false;" download="myimage">
+                    Save
+                </a>
+                <a class="bouton_full" id="picReset">Reset</a>
             </div>
         </div>
         <div>
