--- a/camera2.html
+++ b/camera2.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-            crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
     <link rel="stylesheet" type="text/css" href="vendors/css/ionicons.min.css">
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <link rel="stylesheet" type="text/css" href="resources/css/queries.css">``
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic' rel='stylesheet' type='text/css'>
     <script src="resources/js/camera.js"></script>
     <title>CAM</title>
@@ -39,11 +39,11 @@
         </div>
         <div class="row">
             <div class="bouton_action">
-                <a class="bouton_full" id="picShoot">Shoot</a>
-                <a class="bouton_full" id="downloadImage" href="" onclick="return false;" download="myimage">
+                <a class="btn bouton_full" id="picShoot" href="#">Shoot</a>
+                <a class="btn bouton_full" id="downloadImage" href="#" onclick="return false;" download="myimage">
                     Save
                 </a>
-                <a class="bouton_full" id="picReset">Reset</a>
+                <a class="btn bouton_full" id="picReset" href="#">Reset</a>
             </div>
         </div>
         <div>
