Fin style page camera

--- a/camera2.html
+++ b/camera2.html
@@ -38,16 +38,31 @@
             </div>
         </div>
         <div class="row">
-            <div class="bouton_action">
+            <div class="col span-1-of-3">
                 <a class="btn bouton_full" id="picShoot" href="#">Shoot</a>
+            </div>
+            <div class="col span-1-of-3">
                 <a class="btn bouton_full" id="downloadImage" href="#" onclick="return false;" download="myimage">
                     Save
                 </a>
+            </div>
+            <div class="col span-1-of-3">
                 <a class="btn bouton_full" id="picReset" href="#">Reset</a>
             </div>
         </div>
-        <div>
-
+        <div class="row">
+            <div class="col span-1-of-2 infos">
+                <div>
+                    <img src="resources/img/lati.png">
+                    <div id="latitude" class="infoss"></div>
+                </div>
+                <div><img src="resources/img/longi.png">
+                    <div id="longitude" class="infoss"> </div>
+                </div>
+                <div><img src="resources/img/calend.png">
+                    <div id="dateTime" class="infoss"> </div>
+                </div>
+            </div>
         </div>
     </header>
 
