Correction des boutons sur mobile

--- a/camera2.html
+++ b/camera2.html
@@ -38,15 +38,15 @@
             </div>
         </div>
         <div class="row">
-            <div class="col span-1-of-3">
+            <div class="col span-1-of-3 pad_left">
                 <a class="btn bouton_full" id="picShoot" href="#">Shoot</a>
             </div>
-            <div class="col span-1-of-3">
+            <div class="col span-1-of-3 pad_left">
                 <a class="btn bouton_full" id="downloadImage" href="#" onclick="return false;" download="myimage">
                     Save
                 </a>
             </div>
-            <div class="col span-1-of-3">
+            <div class="col span-1-of-3 pad_left">
                 <a class="btn bouton_full" id="picReset" href="#">Reset</a>
             </div>
         </div>
