change download name
download myimage.png instead of myimage

--- a/camera2.html
+++ b/camera2.html
@@ -44,7 +44,7 @@
             <a class="btn bouton_full" id="picShoot" href="#">Shoot</a>
         </div>
         <div class="col span-1-of-4 pad_left">
-            <a class="btn bouton_full" id="downloadImage" href="#" onclick="return false;" download="myimage">
+            <a class="btn bouton_full" id="downloadImage" href="#" onclick="return false;" download="myimage.png">
                 Save
             </a>
         </div>
