--- a/camera2.html
+++ b/camera2.html
@@ -43,15 +43,15 @@
         <div class="col span-1-of-4 pad_left">
             <a class="btn bouton_full" id="picShoot" href="#">Shoot</a>
         </div>
-        <div class="col span-1-of-4 pad_left">
+        <div class="col span-1-of-4 pad_left disabled">
             <a class="btn bouton_full" id="downloadImage" href="#" onclick="return false;" download="myimage.png">
                 Save
             </a>
         </div>
-        <div class="col span-1-of-4 pad_left">
+        <div class="col span-1-of-4 pad_left disabled">
             <a class="btn bouton_full" id="picReset" href="#">Reset</a>
         </div>
-        <div class="col span-1-of-4 pad_left">
+        <div class="col span-1-of-4 pad_left disabled">
             <a class="btn bouton_full" id="filterGray" href="#">Gray&nbsp;Scale</a>
         </div>
     </div>
