--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
                 <img src="resources/img/isen_cam.png" alt="ISEN cam logo" class="logo">
                 <img src="resources/img/isen_cam.png" alt="ISEN cam logo" class="logo-black">
                 <ul class="main-nav js--main-nav">
-                    <li><a href="camera2.html">Camera</a></li>
+                    <li><a href="camera.html">Camera</a></li>
                 </ul>
                 <a class="mobile-nav-icon js--nav-icon"><i class="ion-navicon-round"></i></a>
             </div>
         </nav>
         <div class="hero-text-box">
             <h1>Bienvenue<br>sur l'ISEN CAM</h1>
-            <a class="btn btn-ghost js--scroll-to-start" href="camera2.html">Let's go to take pictures</a>
+            <a class="btn btn-ghost js--scroll-to-start" href="camera.html">Let's go to take pictures</a>
         </div>
 
     </header>
